--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,7 @@
+bin/*
+!bin/placeholder
+build/
+
 # Prerequisites
 *.d
 
@@ -30,3 +34,16 @@
 *.exe
 *.out
 *.app
+
+# CMake
+CMakeLists.txt.user
+CMakeCache.txt
+CMakeFiles
+CMakeScripts
+Testing
+Makefile
+cmake_install.cmake
+install_manifest.txt
+compile_commands.json
+CTestTestfile.cmake
+_deps
