--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -1,6 +1,10 @@
 find_package(Catch2 CONFIG REQUIRED)
-add_executable(Test test1.cpp)
-target_link_libraries(Test PRIVATE Catch2::Catch2 sudoku_solver)
+add_executable(testdlx test1.cpp)
+target_link_libraries(testdlx PRIVATE Catch2::Catch2 sudoku_solver)
+
+add_executable(testdlxprot test_dlx_prot.cpp)
+target_link_libraries(testdlxprot PRIVATE Catch2::Catch2 sudoku_solver)
 
 include(Catch)
-catch_discover_tests(Test)
+catch_discover_tests(testdlx)
+catch_discover_tests(testdlxprot)
