--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -9,7 +9,8 @@ SET(CMAKE_CXX_STANDARD 20)
 SET(EXECUTABLE_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/bin)
 
 INCLUDE_DIRECTORIES(include)
-SET(LIB_SRC_LIST src/sudoku.cpp)
+
+SET(LIB_SRC_LIST src/sudoku.cpp src/classic_solver.cpp)
 ADD_LIBRARY(sudoku_solver STATIC ${LIB_SRC_LIST})
 
 ADD_LIBRARY(sudoku_board STATIC  src/classic_board.cpp)
