tired today, asleeping

--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -1,18 +1,18 @@
-find_package(Catch2 CONFIG REQUIRED)
-include(Catch)
+FIND_PACKAGE(Catch2 CONFIG REQUIRED)
+INCLUDE(Catch)
 
-add_executable(testdlx test1.cpp)
-target_link_libraries(testdlx PRIVATE Catch2::Catch2)
-catch_discover_tests(testdlx)
+ADD_EXECUTABLE(testdlx test1.cpp)
+TARGET_LINK_LIBRARIES(testdlx PRIVATE Catch2::Catch2)
+CATCH_DISCOVER_TESTS(testdlx)
 
-# add_executable(testdlxprot test_dlx_prot.cpp)
-# target_link_libraries(testdlxprot PRIVATE Catch2::Catch2 sudoku_solver)
-# catch_discover_tests(testdlxprot)
+ADD_EXECUTABLE(testboard test_board.cpp)
+TARGET_LINK_LIBRARIES(testboard PRIVATE Catch2::Catch2 sudoku_board)
+CATCH_DISCOVER_TESTS(testboard)
 
-add_executable(testboard test_board.cpp)
-target_link_libraries(testboard PRIVATE Catch2::Catch2 sudoku_board)
-catch_discover_tests(testboard)
+ADD_EXECUTABLE(testsolver test_solver.cpp)
+TARGET_LINK_LIBRARIES(testsolver PRIVATE Catch2::Catch2 sudoku_board sudoku_solver)
+CATCH_DISCOVER_TESTS(testsolver)
 
-add_executable(testsolver test_solver.cpp)
-target_link_libraries(testsolver PRIVATE Catch2::Catch2 sudoku_board sudoku_solver)
-catch_discover_tests(testsolver)
+ADD_EXECUTABLE(testrules test_rules.cpp)
+TARGET_LINK_LIBRARIES(testrules PRIVATE Catch2::Catch2 sudoku_board sudoku_solver)
+CATCH_DISCOVER_TESTS(testrules)
